# wssCppServer

./: .env  CMakeLists.txt  README.md  auth_utils.hpp  cert.pem  docker-compose.yml  dockerfile  howTo.txt  image.proto  key.pem  main.cpp  vcpkg.json
protobuf_src/: image.pb.cc  image.pb.h
src/: auth_utils.hpp  aux_handler.hpp  auxil.cpp  auxil.hpp  config.hpp  database.hpp  handlers.cpp  httpHandlers.cpp  httpHandlers.hpp  httpServerSession.cpp  httpServerSession.hpp  main.cpp  wssSession.cpp  wssSession.hpp
